# librms-release

./: .travis.yml  AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  gbp.conf  rules
include/rms/: appointment.hpp  condition.hpp  log.hpp  rms.hpp  slot.hpp  study.hpp
rpm/: ros-hydro-librms.spec  ros-indigo-librms.spec  template.spec
src/: appointment.cpp  condition.cpp  log.cpp  rms.cpp  slot.cpp  study.cpp
