<package>
  <name>librms</name>
  <version>0.0.1</version>
  <description>RMS Data Log Client Library</description>

  <author email="rctoris@wpi.edu">Russell Toris</author>
  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  
  <url type="website">http://ros.org/wiki/librms</url>
  <url type="bugtracker">https://github.com/WPI-RAIL/librms/issues</url>
  <url type="repository">https://github.com/WPI-RAIL/librms</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libmysqlclient-dev</build_depend>

  <run_depend>libmysqlclient-dev</run_depend>
</package>

